[gd_scene load_steps=2 format=2]

[ext_resource path="res://HitHurtBoxes/HurtBox.gd" type="Script" id=1]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
[connection signal="invincibility_end" from="." to="." method="_on_HurtBox_invincibility_end"]
[connection signal="invincibility_start" from="." to="." method="_on_HurtBox_invincibility_start"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
